--- a/Domain/Domain.csproj
+++ b/Domain/Domain.csproj
@@ -57,7 +57,6 @@
     <Compile Include="Concrete\EFPhotoRepository.cs" />
     <Compile Include="Concrete\EFUserRepository.cs" />
     <Compile Include="Entities\Photo.cs" />
-    <Compile Include="Entities\RegistrationModel.cs" />
     <Compile Include="Entities\User.cs" />
     <Compile Include="Migrations\201709191106566_Initial.cs" />
     <Compile Include="Migrations\201709191106566_Initial.Designer.cs">
@@ -66,6 +65,14 @@
     <Compile Include="Migrations\201709191119329_Add burhday.cs" />
     <Compile Include="Migrations\201709191119329_Add burhday.Designer.cs">
       <DependentUpon>201709191119329_Add burhday.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201709291321069_AddPhoto and new database.cs" />
+    <Compile Include="Migrations\201709291321069_AddPhoto and new database.Designer.cs">
+      <DependentUpon>201709291321069_AddPhoto and new database.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201709292016243_ChangeTypeUserId.cs" />
+    <Compile Include="Migrations\201709292016243_ChangeTypeUserId.Designer.cs">
+      <DependentUpon>201709292016243_ChangeTypeUserId.cs</DependentUpon>
     </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -83,6 +90,12 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201709191119329_Add burhday.resx">
       <DependentUpon>201709191119329_Add burhday.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201709291321069_AddPhoto and new database.resx">
+      <DependentUpon>201709291321069_AddPhoto and new database.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201709292016243_ChangeTypeUserId.resx">
+      <DependentUpon>201709292016243_ChangeTypeUserId.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
