--- a/WebUI/WebUI.csproj
+++ b/WebUI/WebUI.csproj
@@ -136,11 +136,14 @@
     <Compile Include="App_Start\FilterConfig.cs" />
     <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="App_Start\WebApiConfig.cs" />
+    <Compile Include="Controllers\PhotoController.cs" />
     <Compile Include="Controllers\UserController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
     <Compile Include="Infrastructure\NinjectControllerFactory.cs" />
+    <Compile Include="Models\PhotoModelView.cs" />
+    <Compile Include="Models\RegistrationModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -202,10 +205,11 @@
     <Content Include="Views\User\Login.cshtml" />
     <Content Include="Views\User\MainPage.cshtml" />
     <Content Include="Views\User\Registration.cshtml" />
+    <Content Include="Views\Photo\Shared\_PhotoSummary.cshtml" />
+    <Content Include="Views\Photo\Albums.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
-    <Folder Include="Models\" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="packages.config" />
