--- a/WebUI/packages.config
+++ b/WebUI/packages.config
@@ -3,6 +3,7 @@
   <package id="bootstrap" version="3.3.7" targetFramework="net45" />
   <package id="Castle.Core" version="4.1.1" targetFramework="net45" />
   <package id="EntityFramework" version="6.1.3" targetFramework="net45" />
+  <package id="Fancybox" version="2.1.5" targetFramework="net45" />
   <package id="FontAwesome" version="4.7.0" targetFramework="net45" />
   <package id="jQuery" version="1.9.1" targetFramework="net45" />
   <package id="jQuery.Validation" version="1.10.0" targetFramework="net45" />
